--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile view</title>
+    <link rel="stylesheet" href="styles/profile.css">
 </head>
 <body>
-    
+    <div>
+        <header><h1><strong> Welcome !</strong></h1>
+            <h3>My Profile View </h3>
+        </header>
+    </div>
+    <div>
+        
+        <p class="short"><b>My name is Rohit Ahemed . I work on Website.I can create any type of Website.I enjoy working with it. Iam Junior Web Developer .</b></p>
+    </div>
+    <div>
+        <p><b>My github profile link is <a href="https://github.com/rohitahemed13">Github</a>my Linkdin profile link is <a href="https://www.linkedin.com/in/rohit-zone-a95aaa330/">Linkedin</a> My facebook profile link is <a href="https://www.facebook.com/md.rohit.642432">Facebook</a>My twitter profile link is <a href="https://x.com/RohitZone192268">Twitter</a>My youtube channel link <a href="https://www.youtube.com/channel/UCLtYqjUSDhEf_oQr6Y8flqA">Youtube</a></b></p>
+    </div>
+    <div class="hello"> <footer>&copyCopyright All Reserve Rock <br>Made by <span>Rohit Ahemed</span> </footer></div>
 </body>
 </html>
